Sat Nov 13 18:43:53 1999  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

	* src/Key_List.cpp: The code for output_lookup_function() was
	  not being called if option[GLOBAL] was set.  Thanks to Eugene
 	  Surovegin <ebs@glasnet.ru> for reporting the bug and the fix.

Tue Aug 31 14:47:06 1999  Pradeep Gore  <pradeep@flamenco.cs.wustl.edu>

	* Makefile:
	  Fix for Bug#:250 - The Makefile now uses ACE's build commands.
	  This also gets rid of the build warning on egcs when compiling
	  with repo=1. Thanks to David, Ossama, Bala and Yamuna.

Thu Jul  1 09:31:32 1999  Carlos O'Ryan  <coryan@cs.wustl.edu>

	* Makefile:
	  If we are cross compiling we shouldn't compile gperf, it is not
	  going to help anyway, because we could not run it.

Sun Jun 27 20:40:30 1999  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* src/Key_List.cpp: Added some initializers to keep EGCS from
 	  complaining.

Wed Jun 23 07:24:58 1999  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

	* src/Key_List.cpp (output_hash_function): Use conditional
	  compilation rather than a runtime check to test if
 	  ACE_STANDARD_CHARACTER_SET_SIZE == ACE_EBCDIC_SIZE.  This
 	  suppresses a warning on DEC UNIX.  Thanks to David Levine for
 	  reporting this.

Fri Jun 18 16:54:43 1999  Irfan Pyarali  <irfan@cs.wustl.edu>

	* apps/gperf/src/Key_List.cpp (output_lookup_array): Prefixed
	  debug message with "GPERF".

Thu Jun 17 18:04:30 1999  Douglas C. Schmidt  <schmidt@mambo.cs.wustl.edu>

	* tests/test-[1-5].exp: Fixed all the tests to account for the new
 	  EBCDIC output.

Thu Jun 17 17:25:00 1999  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

	* src/Key_List.cpp (output_hash_function): Generate an asso_values
 	  table that will have the appropriate values for both EBCDIC or
 	  ASCII, depending on the platform.

	* src/Key_List.cpp (output_hash_function),
	  src/Gen_Perf.cpp (Gen_Perf),
	  src/Vectors.h: Replaced the use of ALPHA_SIZE with